--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-  
+
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -29,6 +29,9 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyBriuUXBBKpAYB5U4WkNnvZEWjzQC5E8X4"/>
     </application>
 
 </manifest>
