--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "react-native-i18n": "^0.1.1",
     "react-native-linear-gradient": "^1.6.2",
     "react-native-maps": "^0.11.0",
-    "react-native-permissions": "^0.2.5",
+    "react-native-permissions": "0.2.5",
     "react-native-router-flux": "^3.37.0",
     "react-native-vector-icons": "^3.0.0",
     "react-redux": "^4.4.6",
