--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "android:devices": "$ANDROID_HOME/platform-tools/adb devices",
     "android:logcat": "$ANDROID_HOME/platform-tools/adb logcat *:S ReactNative:V ReactNativeJS:V",
     "android:shake": "$ANDROID_HOME/platform-tools/adb devices | grep '\\t' | awk '{print $1}' | sed 's/\\s//g' | xargs -I {} $ANDROID_HOME/platform-tools/adb -s {} shell input keyevent 82",
-    "flow": "flow --show-all-errors"
+    "flow": "flow --show-all-errors",
+    "devtools": "react-devtools"
   },
   "dependencies": {
     "apisauce": "^0.6.0",
@@ -30,6 +31,7 @@
     "querystringify": "0.0.4",
     "ramda": "^0.22.1",
     "react": "~15.4.0-rc.4",
+    "react-devtools": "^2.0.12",
     "react-native": "0.38.0",
     "react-native-animatable": "^0.6.0",
     "react-native-config": "^0.1.2",
