--- a/ios/ALKO/Info.plist
+++ b/ios/ALKO/Info.plist
@@ -54,7 +54,7 @@
       <string>SimpleLineIcons.ttf</string>
       <string>Zocial.ttf</string>
       <string>Montserrat-Regular.ttf</string>
-      <string/>
+      <string>alko.ttf</string>
     </array>
     <key>UILaunchStoryboardName</key>
     <string>LaunchScreen</string>
