--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -73,6 +73,8 @@
     "react/jsx-closing-bracket-location": 0,
     "require-yield": 0,
     "padded-blocks": 0,
-    "no-return-assign": 0
+    "no-return-assign": 0,
+    "no-confusing-arrow": 0,
+    "no-underscore-dangle": 0
   }
 }
