--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "apisauce": "^0.6.0",
+    "firebase": "^3.6.9",
     "format-json": "^1.0.3",
     "lodash": "^4.17.2",
     "querystringify": "0.0.4",
@@ -49,7 +50,8 @@
     "redux-persist": "^3.5.0",
     "redux-saga": "^0.13.0",
     "reduxsauce": "0.2.0",
-    "seamless-immutable": "^6.3.0"
+    "reselect": "^2.5.4",
+    "stringify-object": "^3.1.0"
   },
   "devDependencies": {
     "ava": "^0.17.0",
