--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "apisauce": "^0.6.0",
     "firebase": "^3.6.9",
     "format-json": "^1.0.3",
+    "geolib": "^2.0.22",
     "lodash": "^4.17.2",
     "querystringify": "0.0.4",
     "ramda": "^0.22.1",
