--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "format-json": "^1.0.3",
     "geolib": "^2.0.22",
     "lodash": "^4.17.2",
+    "moment": "^2.17.1",
     "querystringify": "0.0.4",
     "ramda": "^0.22.1",
     "react": "~15.4.0-rc.4",
