--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-native-device-info": "^0.9.6",
     "react-native-drawer": "^2.3.0",
     "react-native-i18n": "^0.1.1",
-    "react-native-linear-gradient": "1.6.2",
+    "react-native-linear-gradient": "^1.6.2",
     "react-native-maps": "^0.11.0",
     "react-native-permissions": "0.2.5",
     "react-native-router-flux": "^3.37.0",
