--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -76,6 +76,7 @@
     "no-return-assign": 0,
     "no-confusing-arrow": 0,
     "no-underscore-dangle": 0,
-    "react/no-unused-prop-types": 0
+    "react/no-unused-prop-types": 0,
+    "react/no-array-index-key": 0
   }
 }
