--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "presets": [ "react-native" ],
+  "plugins": ["transform-decorators-legacy"],
   "env": {
     "development": {
       "sourceMaps": "inline"
