--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "ramda": "^0.22.1",
     "react": "~15.4.0-rc.4",
     "react-devtools": "^2.0.12",
+    "react-moment-proptypes": "^1.3.0",
     "react-native": "0.38.0",
     "react-native-animatable": "^0.6.0",
     "react-native-config": "^0.1.2",
